Massaged layout and got canvas rendering Added Navbar and logo with dropdown Added Modal dialog for user interaction Added Timeline canvas renders at bottom Refined log analytics to track count by type, entries by loglevel, and entries by date

--- a/mysql-timeline/src/App.css
+++ b/mysql-timeline/src/App.css
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+
+:root {
+	--mast-size: 3rem;
+	--company-font-size: 2rem;
+	--user-font-size: 1.25rem;
+}
+
+.navbar {
+  height: var(--mast-size);
+}
+
+.main {
+  min-height: calc(100vh - var(--mast-size));
+}
